# Agent-release

./: App.py  dashboard.py  dashboard_fixed.py  login.py  requirements.txt  terminal_window.py
Report_Generator_Automation-main/: APPLICATION_ARCHITECTURE_ANALYSIS.md  add_automatic_images_to_json.py  config_cache.json  create_test_template.py  debug_libreoffice.py  debug_method.py  diagnose_libreoffice.py  editor_template.html  enhanced_document_generator.py  enhanced_export_import copy.py  enhanced_export_import.py  environment_config.toml  example_test_script.py  export_code_and_files_page.py  fix_sections_1_7_empty_data.py  force_libreoffice_embed.py  integration_example.py  last_uploaded_zip.json  libreoffice_direct_embed.py  libreoffice_embedded_editor.py  libreoffice_kit_embed.py  libreoffice_real_embed.py  libreoffice_uno_embed.py  onlyoffice_app.py  onlyoffice_demo.py  onlyoffice_desktop_embedder.py  onlyoffice_document_editor.py  package-lock.json  pyproject.toml  requirements.txt  requirements_onlyoffice.txt  sample_document_template.docx  sample_question_config.json  screenshot_annotation_tool.py  screenshot_tool.py  script_executor.py  script_upload_widget.py  secion_enhanced.py  section8_media_handler.py  section8_media_manager.py  (+34 more)
agent-wails-app/: ARCHITECTURE.md  COMPARISON.md  INDEX.md  INSTALL.md  MIGRATION.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  app.go  go.mod  main.go  wails.json
agent-wails-app/backend/: api.go  config.go  report.go  session.go
agent-wails-app/frontend/: index.html  package.json  vite.config.ts
(+14 files in other folders)
